# louper

./: .gitignore  .valalintignore  CONTRIBUTING.md  README.md  RELEASE_HOWTO.md  com.github.ryonakano.louper.yml  gobject-linter.toml  meson.build  vala-lint.conf
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  flatpak-x-checker.yml  gettext.yml  main.yml  merge.yml
data/: Application.css  com.github.ryonakano.louper.desktop.in  com.github.ryonakano.louper.metainfo.xml.in  louper.appdata.xml.in  louper.desktop.in  louper.gschema.xml  louper.metainfo.xml.in  louper.metainfo.xml.in.in  meson.build
data/icons/16/: com.github.ryonakano.louper
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  README.md  ain.po  com.github.ryonakano.louper.pot  cs.po  de.po  es.po  et.po  fi.po  fr.po  hi.po  hr.po  it.po  ja.po  louper.pot  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  ta.po  tr.po  uk.po
po/extra/: LINGUAS  POTFILES  es.po  extra.pot  fr.po  it.po  ja.po  nb_NO.po  nl.po  pt.po  ru.po  sk.po  tr.po  uk.po
src/: Application.vala  MainWindow.vala  application.c  application.h  louper-application.c  louper-application.h  louper-main-window.blp  louper-main-window.c  louper-main-window.h  louper.gresource.xml  main-window.c  main-window.h  main.c  meson.build
src/Settings/: CustomShortcutSettings.vala
